--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,10 @@
   "homepage": "https://openmix.org/mix-php",
   "license": "Apache-2.0",
   "scripts": {
-    "swoole:start": "php8 bin/swoole.php start",
+    "swoole:start": "php bin/swoole.php start",
     "swooleco:start": "php bin/swooleco.php start",
     "workerman:start": "php bin/workerman.php start",
-    "cli:clearcache": "php8 bin/cli.php clearcache"
+    "cli:clearcache": "php bin/cli.php clearcache"
   },
   "autoload": {
     "psr-4": {
