--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,10 @@
   "homepage": "https://openmix.org/mix-php",
   "license": "Apache-2.0",
   "scripts": {
-    "swoole:start": "php bin/swoole.php start",
-    "swooleco:start": "php bin/swooleco.php start",
-    "workerman:start": "php bin/workerman.php start",
-    "cli:clearcache": "php bin/cli.php clearcache"
+    "swoole:start": "php8 bin/swoole.php start",
+    "swooleco:start": "php8 bin/swooleco.php start",
+    "workerman:start": "php8 bin/workerman.php start",
+    "cli:clearcache": "php8 bin/cli.php clearcache"
   },
   "autoload": {
     "psr-4": {
@@ -22,7 +22,8 @@
     "mix/redis": "^3.0",
     "symfony/dotenv": "^5.3",
     "hassankhan/config": "^2.2",
-    "monolog/monolog": "^2.3"
+    "monolog/monolog": "^2.3",
+    "firebase/php-jwt": "^5.4"
   },
   "require-dev": {
     "swoole/ide-helper": "^4.6"
