--- a/composer.json
+++ b/composer.json
@@ -13,14 +13,17 @@
   "autoload": {
     "psr-4": {
       "App\\": "src/"
-    }
+    },
+    "files": [
+      "src/functions.php"
+    ]
   },
   "require": {
     "workerman/workerman": "^4.0",
     "mix/vega": "~3.0",
     "mix/database": "~3.0",
     "mix/redis": "~3.0",
-    "symfony/dotenv": "^5.3",
+    "vlucas/phpdotenv": "^5.3",
     "hassankhan/config": "^2.2",
     "monolog/monolog": "^2.3",
     "firebase/php-jwt": "^5.4"
