--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
   "license": "Apache-2.0",
   "scripts": {
     "cliserver:start": "php -S localhost:8000 public/index.php",
-    "swoole:start": "php bin/swoole.php",
+    "swoole:start": "php8 bin/swoole.php",
     "swooleco:start": "php bin/swooleco.php",
     "workerman:start": "php bin/workerman.php start",
     "cli:clearcache": "php bin/cli.php clearcache"
@@ -21,10 +21,10 @@
   },
   "require": {
     "workerman/workerman": "^4.0",
-    "mix/vega": "~3.0",
-    "mix/cli": "~3.0",
-    "mix/database": "~3.0",
-    "mix/redis": "~3.0",
+    "mix/vega": "~3.0.0",
+    "mix/cli": "~3.0.0",
+    "mix/database": "~3.0.0",
+    "mix/redis": "~3.0.0",
     "vlucas/phpdotenv": "^5.3",
     "hassankhan/config": "^2.2",
     "monolog/monolog": "^2.3",
